# stac-cano

./: LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pixi.yml
docs/: conf.py  index.md
src/stac_cano/: __init__.py  _version.py
src/stac_cano/datasets/: __init__.py  copernicus.py  dlr.py  general.py  microsoft.py  usgs.py
tests/: conftest.py  test_package.py
