[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stac-cano"
authors = [
  { name = "Jack Hayes", email = "jehayes@uw.edu" },
]
description = "Programmatic access for various STAC catalogs relevant in volcanology"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
  "pystac>=1.0",
  "pystac-client>=0.8",
  "odc-stac>=0.4",
  "xarray>=2023.10",
  "rioxarray>=0.15",
  "numpy",
  "pandas",
  "geopandas>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=6",
  "pytest-cov>=3",
  "mypy>=1.0",
  "ruff>=0.1",
  "pre-commit",
  "ipykernel",
  # Docs
  "myst-nb",
  "sphinx>=7.0",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-autodoc-typehints",
]
viz = [
  "matplotlib",
  "ipyleaflet",
]
extra = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/Jack-Hayes/stac-cano"
"Bug Tracker" = "https://github.com/Jack-Hayes/stac-cano/issues"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/stac_cano/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
log_cli_level = "INFO"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["stac_cano"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
files = ["src", "tests"]
warn_unused_configs = true
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stac_cano.*"
disallow_untyped_defs = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "I", "ARG", "C4", "EM", "ICN", "G", "PGH", "PIE", "PL", "PT", "PTH", "RET", "RUF", "SIM", "T20", "UP", "YTT", "EXE", "NPY", "PD"]
ignore = ["PLR09", "PLR2004", "ISC001", "PLC0414", "PD901"]
exclude = ["docs/*.ipynb"]
isort.required-imports = ["from __future__ import annotations"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
pystac = "*"
pystac-client = "*"
odc-stac = "*"
xarray = "*"
rioxarray = "*"
numpy = "*"
pandas = "*"
geopandas = "*"
gdal = "*"
libgdal = "*"
proj = "*"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-cov = "*"
mypy = "*"
ruff = "*"
pre-commit = "*"
ipykernel = "*"
sphinx = "*"
myst-nb = "*"
pydata-sphinx-theme = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx-autodoc-typehints = "*"

[tool.pixi.feature.viz.dependencies]
matplotlib-base = "*"
ipyleaflet = "*"

[tool.pixi.feature.extra.dependencies]
requests = "*"

[tool.pixi.pypi-dependencies]
stac-cano = { path = ".", editable = true }

# [tool.pixi.feature.dev.pypi-dependencies]
# stac-cano = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "viz", "extra"], solve-group = "default" }

[tool.pixi.feature.dev.tasks]
test = "pytest --cov --cov-report=xml --cov-report=term"
lint = "ruff check src tests"
docs = "python -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs docs/_build/html"
